--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
       run: echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
 
     - name: "Validate composer.json and composer.lock"
-      run: "composer validate --strict"
+      run: "composer validate --no-check-publish"
 
     - name: Install dependencies with composer
       run: composer install --prefer-dist
